--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,4 @@
 steps:
+  - name 'gcr.io/$PROJECT_ID/site-builder'
   - name: "gcr.io/$PROJECT_ID/firebase"
     args: ["deploy", "-P", "$PROJECT_ID"]
