actually use env var

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,19 +6,18 @@ steps:
   #     - "-P"
   #     - "$PROJECT_ID"
   - name: "gcr.io/cloud-builders/curl"
+    entrypoint: "bash"
     args:
-      - "-sv"
-      - "-X"
-      - "POST"
-      - "https://api.cloudflare.com/client/v4/zones/${_CF_ZONE}/purge_cache"
-      - "-H"
-      - "X-Auth-Email: ${_CF_EMAIL}"
-      - "-H"
-      - "X-Auth-Key: $${CF_KEY}"
-      - "-H"
-      - "Content-Type: application/json"
-      - "--data"
-      - '{"purge_everything": true}'
+      - "c"
+      - >
+        curl
+        -sv
+        -X POST
+        -H "X-Auth-Email: ${_CF_EMAIL}"
+        -H "X-Auth-Key: $${CF_KEY}"
+        -H "Content-Type: application/json"
+        --data '{"purge_everything": true}'
+        "https://api.cloudflare.com/client/v4/zones/${_CF_ZONE}/purge_cache"
     secretEnv:
       - CF_KEY
 substitutions:
