--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
-  # - name: "gcr.io/$PROJECT_ID/site-builder"
-  # - name: "gcr.io/$PROJECT_ID/firebase"
-  #   args:
-  #     - "deploy"
-  #     - "-P"
-  #     - "$PROJECT_ID"
+  - name: "gcr.io/$PROJECT_ID/site-builder"
+  - name: "gcr.io/$PROJECT_ID/firebase"
+    args:
+      - "deploy"
+      - "-P"
+      - "$PROJECT_ID"
   - name: "gcr.io/cloud-builders/curl"
     entrypoint: "bash"
     args:
@@ -13,11 +13,11 @@ steps:
         curl
         -sv
         -X POST
-        -H "X-Auth-Email: ${_CF_EMAIL}"
-        -H "X-Auth-Key: $${CF_KEY}"
+        -H "X-Auth-Email: $_CF_EMAIL"
+        -H "X-Auth-Key: $$CF_KEY"
         -H "Content-Type: application/json"
         --data '{"purge_everything": true}'
-        "https://api.cloudflare.com/client/v4/zones/${_CF_ZONE}/purge_cache"
+        "https://api.cloudflare.com/client/v4/zones/$_CF_ZONE/purge_cache"
     secretEnv:
       - CF_KEY
 substitutions:
