--- a/firebase.json
+++ b/firebase.json
@@ -16,7 +16,9 @@
     "ignore": [
       "cloudbuild.yaml",
       "firebase.json",
+      "LICENSE",
       "Makefile",
+      "README.md",
       ".gcloudignore",
       ".git/**/*",
       ".gitignore"
