--- a/firebase.json
+++ b/firebase.json
@@ -5,7 +5,7 @@
     "public": "dist/",
     "headers": [
       {
-        "source": "**/*.@(ttf|woff)",
+        "source": "**/*.@(ttf|woff|css)",
         "headers": [{ "key": "Cache-Control", "value": "max-age=31536000" }]
       },
       {
