--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,7 +4,7 @@
   "display": "standalone",
   "name": "Sean KH Liao",
   "short_name": "Sean",
-  "start_url": "/",
+  "start_url": "/?utm_source=pwa",
   "theme_color": "#000",
   "icons": [
     {
