--- a/firebase.json
+++ b/firebase.json
@@ -2,7 +2,7 @@
   "hosting": {
     "cleanUrls": true,
     "trailingSlash": false,
-    "public": "dist/",
+    "public": "dst/",
     "headers": [
       {
         "source": "**/*.@(ttf|woff|css)",
@@ -11,18 +11,6 @@
       {
         "source": "**/*.@(webp|png)",
         "headers": [{ "key": "Cache-Control", "value": "max-age=2592000" }]
-      }
-    ],
-    "redirects": [
-      {
-        "source": "/blog",
-        "destination": "https://blog.seankhliao.com",
-        "type": 302
-      },
-      {
-        "source": "/blog/:post*",
-        "destination": "https://blog.seankhliao.com/:post",
-        "type": 302
       }
     ]
   }
