--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,21 +4,21 @@ steps:
     entrypoint: "sh"
     args:
       - "-c"
-      - >
-        mkdir dst;
+      - >-
+        mkdir -p dst;
         convert -background none -density 1200 -resize 2100x1350
-          src/map.svg
-          -write dst/map.webp
-          dst/map.png;
-        convert src/icon.tif -flatten
-          \( +clone -resize 512x512 -quality 60 -write dst/icon-512.png +delete \)
-          \( +clone -resize 192x192 -quality 60 -write dst/icon-192.png +delete \)
-          \( +clone -resize 128x128 -quality 60 -write dst/icon-128.png +delete \)
-          \( +clone -resize 64x64 -quality 60 -write dst/icon-64.png +delete \)
-          \( +clone -resize 48x48 -quality 60 -write dst/icon-48.png +delete \)
-          \( +clone -resize 32x32 -quality 60 -write dst/icon-32.png +delete \)
-          \( +clone -resize 16x16 -quality 60 -write dst/icon-16.png +delete \)
-          -resize 16x16 -quality 60 dst/favicon.ico
+        src/map.svg
+        -write dst/map.webp
+        dst/map.png;
+        convert src/icon.tif -flatten \
+        \( +clone -resize 512x512 -quality 60 -write dst/icon-512.png +delete \)
+        \( +clone -resize 192x192 -quality 60 -write dst/icon-192.png +delete \)
+        \( +clone -resize 128x128 -quality 60 -write dst/icon-128.png +delete \)
+        \( +clone -resize 64x64 -quality 60 -write dst/icon-64.png +delete \)
+        \( +clone -resize 48x48 -quality 60 -write dst/icon-48.png +delete \)
+        \( +clone -resize 32x32 -quality 60 -write dst/icon-32.png +delete \)
+        \( +clone -resize 16x16 -quality 60 -write dst/icon-16.png +delete \)
+        -resize 16x16 -quality 60 dst/favicon.ico;
   - name: "gcr.io/$PROJECT_ID/site-builder:latest"
     waitFor: ["-"]
   - name: "gcr.io/$PROJECT_ID/firebase:latest"
@@ -30,7 +30,7 @@ steps:
     entrypoint: "bash"
     args:
       - "-c"
-      - >
+      - >-
         curl
         -s
         -X POST
