--- a/src/authed-src/package.json
+++ b/src/authed-src/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "dependencies": {
     "firebase": "^6.1.1",
+    "firebaseui": "^4.0.0",
     "google-protobuf": "^3.8.0",
     "grpc-web": "^1.0.4"
   }
