--- a/firebase.json
+++ b/firebase.json
@@ -15,6 +15,10 @@
       {
         "source": "/blog",
         "headers": [{ "key": "Cache-Control", "value": "no-cache" }]
+      },
+      {
+        "source": "/blog/**",
+        "headers": [{ "key": "Cache-Control", "value": "max-age=86400" }]
       }
     ]
   }
