--- a/firebase.json
+++ b/firebase.json
@@ -9,7 +9,7 @@
         "headers": [{ "key": "Cache-Control", "value": "max-age=31536000" }]
       },
       {
-        "source": "**/*.@(webp|png)",
+        "source": "**/*.@(webp|png|ico)",
         "headers": [{ "key": "Cache-Control", "value": "max-age=2592000" }]
       },
       {
