--- a/js/cloudbuild.yaml
+++ b/js/cloudbuild.yaml
@@ -1,10 +1,11 @@
 steps:
-  - name: gcr.io/$PROJECT_ID/git:latest
+  - name: gcr.io/cloud-builders/git:latest
     id: cleanup
     entrypoint: sh
     args:
       - -c
       - >-
+        set -euxo pipefail;
         rm src/{authed,iglog,readss}.*
   - name: gcr.io/$PROJECT_ID/parcel:latest
     id: build js
@@ -25,6 +26,7 @@ steps:
     args:
       - -c
       - >-
+        set -euxo pipefail;
         mkdir -p /root/.ssh &&
         cd /root/.ssh &&
         printenv GH_KNOWN > known_hosts && 
