--- a/js/cloudbuild.yaml
+++ b/js/cloudbuild.yaml
@@ -5,11 +5,10 @@ steps:
     args:
       - -c
       - >-
-        set -euxo pipefail;
+        set -eux;
         rm src/{authed,iglog,readss}.*
   - name: gcr.io/$PROJECT_ID/parcel:latest
     id: build js
-    waitFor: ["-"]
     args:
       - build
       - -d
