--- a/.github/workflows/sitegen.yaml
+++ b/.github/workflows/sitegen.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - run: docker login registry -u seankhliao -p $GITHUB_TOKEN
+      - run: docker login docker.pkg.github.com -u seankhliao -p $GITHUB_TOKEN
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: docker build -t docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:${GITHUB_SHA:0:7} -t docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:latest sitegen
