--- a/.github/workflows/sitegen.yaml
+++ b/.github/workflows/sitegen.yaml
@@ -14,9 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - run: docker login docker.pkg.github.com -u seankhliao -p $GITHUB_TOKEN
+      - run: docker login docker.pkg.github.com -u seankhliao -p $PAT
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PAT: ${{ secrets.GH_PAT }}
       - run: docker build -t docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:${GITHUB_SHA:0:7} -t docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:latest sitegen
       - run: docker push docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:${GITHUB_SHA:0:7}
       - run: docker push docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:latest
