use working-directory

--- a/sitegen/Dockerfile
+++ b/sitegen/Dockerfile
@@ -3,7 +3,7 @@ FROM golang:alpine AS build
 WORKDIR /app
 RUN apk add --no-cache ca-certificates
 COPY . .
-RUN GO111MODULE=on CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -mod=vendor -o app
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -mod=vendor -o app
 
 
 FROM alpine:latest
