--- a/.github/workflows/sitegen.yaml
+++ b/.github/workflows/sitegen.yaml
@@ -17,6 +17,7 @@ jobs:
       - run: docker login docker.pkg.github.com -u seankhliao -p $PAT
         env:
           PAT: ${{ secrets.GH_PAT }}
-      - run: docker build -t docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:${GITHUB_SHA:0:7} -t docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:latest sitegen
+      - run: docker build -t docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:${GITHUB_SHA:0:7} -t docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:latest .
+        working-directory: sitegen
       - run: docker push docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:${GITHUB_SHA:0:7}
       - run: docker push docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:latest
