--- a/sitegen/Dockerfile
+++ b/sitegen/Dockerfile
@@ -3,6 +3,7 @@ FROM golang:alpine AS build
 WORKDIR /app
 RUN apk add --no-cache ca-certificates
 COPY . .
+RUN ls && go version
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -mod=vendor -o app
 
 
