--- a/.github/workflows/sitegen.yaml
+++ b/.github/workflows/sitegen.yaml
@@ -22,9 +22,6 @@ jobs:
       - run: docker login docker.pkg.github.com -u seankhliao -p $PAT
         env:
           PAT: ${{ secrets.GH_PAT }}
-      - run: docker build \
-              --cache-from docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:latest \
-              -t docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:${GITHUB_SHA:0:7} \
-              -t docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:latest .
+      - run: docker build --cache-from docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:latest -t docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:${GITHUB_SHA:0:7} -t docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:latest .
       - run: docker push docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:${GITHUB_SHA:0:7}
       - run: docker push docker.pkg.github.com/seankhliao/com-seankhliao/sitegen:latest
